# Toolshare-desktop

./: .gitignore  pyproject.toml
backend/database/: models.py
frontend/UI/login/: login-view.py
